<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Foreground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/calculator"
        android:textColor="@color/Black"
        android:textSize="40sp"
        android:fontFamily="@font/als_spb"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:layout_weight="10"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/arifmetic_operations"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arithmetic_operations">
        </Button>


        <Button
            android:id="@+id/exponentiation"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exponentiation"></Button>

        <Button
            android:id="@+id/trigonometric_function"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trigonometric_function"></Button>

        <Button
            android:id="@+id/logarithmic"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logarithmic"></Button>

    </LinearLayout>
</LinearLayout>